# libsais-rs

./: Cargo.toml  README.md  build.rs
cprobe/: libsais_probe.c
examples/: bench_vs_c.rs  profile_rust_only.rs
src/: lib.rs
